--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Flask CI/CD
 
 on:
   push:
@@ -13,15 +13,32 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          python-version: '3.12'
 
-      - name: Build and push Docker image
+      - name: Install dependencies
         run: |
-          docker build -t vasiljkovdarko/taskapp_kiii .
-          docker tag vasiljkovdarko/taskapp_kiii vasiljkovdarko/taskapp_kiii:latest
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Build Docker image
+        run: |
+          docker build -t vasiljkovdarko/taskapp_kiii:latest .
+
+      - name: Login to DockerHub
+        run: |
+          echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+      - name: Push Docker image to DockerHub
+        run: |
           docker push vasiljkovdarko/taskapp_kiii:latest
+
+      - name: Deploy & Run Container (Test)
+        if: success()
+        run: |
+          docker run -d -p 5000:5000 vasiljkovdarko/taskapp_kiii:latest
+          sleep 10  # Wait for container startup
+          curl -v http://localhost:5000 || (echo "Health check failed!" && exit 1)
 
