--- a/flask-ingress.yaml
+++ b/flask-ingress.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: flask-app
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: "nginx"
 spec:
-  ingressClassName: nginx
   rules:
     - host: flask.local
       http:
@@ -17,4 +17,5 @@ spec:
               service:
                 name: flask-service
                 port:
-                  number: 5000
+                  number: 6000
+
