--- a/flask-service.yaml
+++ b/flask-service.yaml
@@ -8,6 +8,6 @@ spec:
     app: flask-app
   ports:
     - protocol: TCP
-      port: 5000
+      port: 6000
       targetPort: 5000
-  type: LoadBalancer
+  type: ClusterIP
